k8s-yamls-master/k8s-yamls-master/live/prod/namespaces/jenkins-prod/1-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins-prod
  labels:
    istio-injection: disabled
    namespace: jenkins-prod
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
    # pss-enforce: "true"
---
#default deny network policy
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: jenkins-prod
spec:
  podSelector: {}
