k8s-yamls-master/k8s-yamls-master/live/prod/namespaces/jenkins-prod/6-netpol-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prometheus.any.any
  namespace: jenkins-prod
spec:
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: monitoring
        podSelector:
          matchLabels:
            app.kubernetes.io/name: prometheus
      # ports:
      # - port: 8080
        # protocol: TCP
  podSelector: {}
  policyTypes:
  - Ingress
